<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/sort"
        android:title="@string/sort_menu"
        app:showAsAction="always">

        <menu
            android:id="@+id/sort_menu">

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/action_sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_year"
                android:title="@string/action_sort_by_year"/>

            <item
                android:id="@+id/action_sort_by_genre"
                android:title="@string/action_sort_by_genre"/>

            <item
                android:id="@+id/action_sort_by_producer"
                android:title="@string/action_sort_by_producer"/>

        </menu>

    </item>

</menu>